# isimip-qa

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  conftest.py  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
isimip_qa/: __init__.py  config.py  constants.py  exceptions.py  main.py  mixins.py  models.py  parser.py  regions.py
isimip_qa/assessments/: __init__.py  cdf.py  daily.py  day.py  dayofyear.py  dayofyearly.py  map.py  monthofyear.py  pdf.py  year.py  yearly.py
isimip_qa/extractions/: __init__.py  attrs.py  count.py  countmap.py  histogram.py  map.py  mask.py  mean.py  meanmap.py  point.py
isimip_qa/mixins/: __init__.py  assessments.py  extractions.py  plots.py
isimip_qa/plots/: __init__.py  cdf.py  daily.py  dayofyear.py  map.py  monthofyear.py  pdf.py  yearly.py
isimip_qa/regions/: countries.json  giorgi.json
isimip_qa/tests/: test_extractions.py  test_plots.py
notebooks/: extract_maps.ipynb  extract_point.ipynb  extract_points.ipynb
requirements/: pytest.txt
testing/cdo/: README.md  linear_fldmean.csv  mask_fldmean.csv  point_fldmean.csv  sine_fldmean.csv
testing/datasets/: linear.nc  mask.nc  point.nc  sine.nc
testing/extractions/: linear_global_histogram.csv  linear_global_mean.csv  mask_global_count.csv  mask_global_countmap.csv  mask_global_histogram.csv  mask_global_mean.csv  mask_global_meanmap.csv  point_global_count.csv  point_global_histogram.csv  point_global_mean.csv  sine_global_attrs.json  sine_global_histogram.csv  sine_global_mean.csv
