[metadata]
name = isimip-qa
version = attr: isimip_qa.VERSION
description = A command line tool to for quality assessment whithin the ISIMIP project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ISI-MIP/isimip-qa
author = Jochen Klar
email = jochen.klar@pik-potsdam.de
license = MIT
classifiers =
    # see https://pypi.org/classifiers/
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    isimip-utils~=1.0.1
    netCDF4~=1.5.6

[options.entry_points]
console_scripts =
  isimip-qa = isimip_qa.main:main

[tool:pytest]
python_files = tests.py test_*.py *_tests.py
script_launch_mode = subprocess
